<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Επιλογές"
        android:textColor="@color/df_red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_settings">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Πρόγραμμα Σπουδών"
            android:textSize="25dp" />

        <RadioGroup
            android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/hmmy_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:text="@string/ΗΜΜΥ"
                android:buttonTint="@color/df_red"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/cied_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:text="@string/CIED"
                android:buttonTint="@color/df_red"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/ele_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ELE"
                android:buttonTint="@color/df_red"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Λήψη Ανακοινώσεων"
            android:textSize="25dp" />

        <RadioGroup
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes_news_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:buttonTint="@color/df_red"
                android:text="Θέλω"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/no_news_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/df_red"
                android:layout_marginTop="16dp"
                android:text="Δεν Θέλω"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="FeedBack"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="Ανέφερε προβλήματα και bug μέσω email πατώντας το παρακάτω κουμπί. Χρησιμοποίησε το θέμα του email βάζοντας εναν γενικό τίτλο και έπειτα περιέγραψε τι παρουσιάστηκε." />

        <TextView
            android:id="@+id/feedbackButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="Αναφορά Προβλήματος"
            android:textAlignment="center"
            android:textColor="@color/df_red"
            android:textSize="23dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/feedbackButton2"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:text="(support@dimitrisiliou.atlassian.net)"
            android:textAlignment="center"
            android:textColor="@color/df_red"
            android:textSize="11sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>